--- a/homework1/index.html
+++ b/homework1/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homework1
-    </title>
+    <title>EVEREST</title>
+    <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-   <h1>hello world</h1> 
-   <p>hgcuhvbiuvhjvlkjvghvjhvhjvjhvhvhj</p>
+    <h1>1922 British Mount Everest expedition</h1>
+    <section class="secrion1">
+        <div class="conteiner">
+            <menu></menu>
+<hr>
+<p>The 1922 British Mount Everest expedition was the first mountaineering expedition with the express aim of making the first ascent of Mount Everest. This was also the first expedition that attempted to climb Everest using bottled oxygen. The expedition would attempt to climb Everest from the northern side out of Tibet. At the time, Everest could not be attempted from the south out of Nepal, as the country was closed to Western foreigners.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Mount_Everest_North_Face.jpg/1024px-Mount_Everest_North_Face.jpg" alt="mount Everest"/>
+    <br>
+    <br>
+    The 1921 <a href="https://www.youtube.com/watch?v=YpMCG6Tgrlo&ab_channel=LarryBees"target="_blank">British Mount Everest</a> reconnaissance expedition had explored the whole eastern and northern surroundings of the mountain. In searching for the easiest route, George Mallory, who was also to be a member of the 1924 expedition (and the only person on all three expeditions in 1921, 1922 and 1924), had discovered a route which, in his opinion, would allow an attempt on the summit.
+    After two unsuccessful summit attempts, the expedition ended on the third attempt when seven Nepalese porters died as the result of a group-induced avalanche. Not only had the expedition failed to reach the summit, but it also marked the first reported climbing deaths on Mount Everest. The expedition did however establish a new world record climbing height of 8,326 metres (27,320 ft) during their second summit attempt, which was subsequently exceeded in the 1924 expedition. 
+    The surveying activities in 1921 allowed the creation of maps which were a pre-condition for the 1922 expedition. John Noel took on the role of official expedition photographer. He took with him three movie cameras, two panorama cameras, four sheet cameras, one stereo camera and five so called "vest pocket Kodaks". The latter were small lightweight cameras that could be taken by the mountaineers to great heights. These cameras were intended to allow climbers to document a possible summit success. 
+    Additionally they took a special "black tent" for photographic work. Thanks to Noel's efforts, many photographs and one movie chronicled the expedition.</p1>
+
+<h2>Expedition participants</h2>
+<img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f5/1922_Everest_expedition_at_Base_Camp.jpg/1280px-1922_Everest_expedition_at_Base_Camp.jpg" alt="Expedition participants" />
+<ul>
+    <li>Charles G. Bruce</li>
+    <li>Edward Lisle Strutt</li>
+    <li>George Mallory</li>
+    <li>George Ingle Finch</li>
+    <li>Edward "Teddy" F. Norton</li>
+    </ul>
+        </div>
+    </section>
 </body>
 </html>
+
+
