--- a/homework5/index.html
+++ b/homework5/index.html
@@ -8,28 +8,30 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <table>
-    <tr>
-      <th>Name</th>
-      <th>Date</th>
-      <th></th>
-    </tr>
-    <tr>
-      <th>File.pdf</th>
-      <td>3 min ago</td>
-      <td></td>
-   </tr>
-   <tr>
-    <th>File.pdf</th>
-    <td>Yesterday</td>
-    <td></td>
- </tr>
- <tr>
-  <th>File.pdf</th>
-  <td>June 1st, 2019</td>
-  <td></td>
-</tr>
-  </table>
+  <div class="tablett">
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Date</th>
+        <th></th>
+      </tr>
+      <tr>
+        <th>File.pdf</th>
+        <td>3 min ago</td>
+        <td></td>
+      </tr>
+      <tr>
+        <th>File.pdf</th>
+        <td>Yesterday</td>
+        <td></td>
+      </tr>
+      <tr>
+        <th>File.pdf</th>
+        <td>June 1st, 2019</td>
+        <td></td>
+      </tr>
+    </table>
+  </div>
   <br>
   <br>
   <table>
