--- a/homework2/index.html
+++ b/homework2/index.html
@@ -17,13 +17,13 @@
     </div>
 
     <div class="cookieBaner2">
-        <img class="img1" src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework2\image\image 11 (1).png" alt="">
+        <img class="img1" src="image/image 11 (1).png" alt="">
         <p class="text2">We use cookies to enhance your user experience. By continuing to visit this site you agree to <a href="text22">our use of cookies.</a></p>
-        <img class="img2" src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework2\image\image 10 (2).png" alt="">
+        <img class="img2" src="image/image 10 (2).png" alt="">
     </div>
 
     <div class="cookieBaner3">
-        <img class="img3" src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework2\image\Vector (8).png" alt="">
+        <img class="img3" src="image/Vector (8).png" alt="">
         <p class="text3">We use cookies to ensure that we give you the best experience on our website. <a href="in">Read cookies policies.</a></p>
         <button class="button3">Decline</button>
         <button class="button33">Allow</button>
@@ -36,7 +36,7 @@
     
    <div class="cookiebaner5">
     <div class="window1">
-        <img class="img5" src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework2\image\🍪 Cookie Notice (3).png" alt="">
+        <img class="img5" src="image/🍪 Cookie Notice (3).png" alt="">
     </div>
     <div class="window2">
         <p class="text5">We use cookies to learn how you interact with our content, and show you relevant content and ads based on your browsing history. You can adjust your settings below. Heres our policy</p>
@@ -70,7 +70,7 @@
 
      <div class="cookieBaners11">
         <div class="header11">
-            <img class="img11" src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework2\image\🍪 Cookie settings (1).png" alt="" />
+            <img class="img11" src="image/🍪 Cookie settings (1).png" alt="" />
             <p class="text11">We use our own cookies so that we can show you this website and understand how you use them to improve the services we offer</p>
         </div>
         <div class="buttons">
