--- a/homework4/index.html
+++ b/homework4/index.html
@@ -13,15 +13,15 @@
          <h1 class="title1">Stay focused on saving money</h1>
          <p class="text1">It is important to stay focused on saving money in any way you can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
          <nav class="icons">
-            <a class="google"  href="https://www.google.com/"><img src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework4\image\Vector (9).png" alt=""></a>
-            <a class="appstore"  href="https://www.apple.com/app-store/"><img src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework4\image\Vector (10).png" alt=""></a>
-            <a class="windows"  href="https://www.microsoft.com/de-de/windows?r=1"><img src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework4\image\Vector (11).png" alt=""></a>
+            <a class="google"  href="https://www.google.com/"><img src="image/Vector (9).png" alt=""></a>
+            <a class="appstore"  href="https://www.apple.com/app-store/"><img src="image/Vector (10).png" alt=""></a>
+            <a class="windows"  href="https://www.microsoft.com/de-de/windows?r=1"><img src="image/Vector (11).png" alt=""></a>
          </nav>
       </section>
       <div class="foto">
-         <img class="foto1" src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework4\image\Video_bg (3).png" alt=""/>
-         <img class="foto3" src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework4\image\Video_bg (5).png" alt=""/>
-         <img class="foto2" src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework4\image\Video_bg (4).png" alt=""/>
+         <img class="foto1" src="image/Video_bg (3).png" alt=""/>
+         <img class="foto3" src="image/Video_bg (5).png" alt=""/>
+         <img class="foto2" src="image/Video_bg (4).png" alt=""/>
       </div>
    </header>
    <main class="main">
@@ -74,16 +74,16 @@
      <p class="email">info@cloudbudget.com</p>
      <p class="numer">+1 844-721-7120</p>
      <nav class="icons2"></nav>
-     <a class="facebook"  href="https://www.facebook.com/"><img src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework4\image\Vector (12).png" alt=""></a>
-     <a class="instagram"  href="https://www.instagram.com/"><img src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework4\image\Vector (15).png" alt=""></a>
-     <a class="twiter"  href="https://twitter.com/?lang=uk"><img src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework4\image\Vector (14).png" alt=""></a>
+     <a class="facebook"  href="https://www.facebook.com/"><img src="image/Vector (12).png" alt=""></a>
+     <a class="instagram"  href="https://www.instagram.com/"><img src="image/Vector (15).png" alt=""></a>
+     <a class="twiter"  href="https://twitter.com/?lang=uk"><img src="image/Vector (14).png" alt=""></a>
  </div>
  <div class="block4">
      <h class="WeSupport">We Support</h>
      <br>
      <br>
      <br>
-     <img class="bank" src="C:\Users\HP\Desktop\cursorcurs\Hausaufgaben-\homework4\image\secure-p-1 1 (2).png" alt="" />
+     <img class="bank" src="image/secure-p-1 1 (2).png" alt="" />
  </div>
 
 
