--- a/homeworkbonus/index.html
+++ b/homeworkbonus/index.html
@@ -16,9 +16,9 @@
                         <p class="clock">1:41</p>
                     </section>
                     <div class="rightside">
-                        <img class="mobilesignal" src="image/Mobile Signal.png" alt="" />
-                        <img class="wifi" src="image/Wifi-path.png" alt="" />
-                        <img class="fill" src="image/Fill.png" alt="" />
+                        <img class="qwer" src="image/Mobile Signal.png" alt="" />
+                        <img class="qwer" src="image/Wifi-path.png" alt="" />
+                        <img class="qwer" src="image/Fill.png" alt="" />
                     </div>
 
                     <div class="Wether">
