--- a/homework4/index.html
+++ b/homework4/index.html
@@ -13,7 +13,7 @@
          <h1 class="title1">Stay focused on saving money</h1>
          <p class="text1">It is important to stay focused on saving money in any way you can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
          <nav class="icons">
-            <a class="google"  href="https://www.google.com/"><img src="image/Vector (9).png" alt=""></a>
+            <a class="google"  href="https://www.google.com/"><img src="image/ion-logo-google-playstore.png" alt=""></a>
             <a class="appstore"  href="https://www.apple.com/app-store/"><img src="image/Vector (10).png" alt=""></a>
             <a class="windows"  href="https://www.microsoft.com/de-de/windows?r=1"><img src="image/Vector (11).png" alt=""></a>
          </nav>
@@ -75,7 +75,7 @@
      <p class="numer">+1 844-721-7120</p>
      <nav class="icons2"></nav>
      <a class="facebook"  href="https://www.facebook.com/"><img src="image/Vector (12).png" alt=""></a>
-     <a class="instagram"  href="https://www.instagram.com/"><img src="image/Vector (15).png" alt=""></a>
+     <a class="instagram"  href="https://www.instagram.com/"><img src="image/Group.png" alt=""></a>
      <a class="twiter"  href="https://twitter.com/?lang=uk"><img src="image/Vector (14).png" alt=""></a>
  </div>
  <div class="block4">
