--- a/homeworkbonus/index.html
+++ b/homeworkbonus/index.html
@@ -17,7 +17,7 @@
                     </section>
                     <div class="rightside">
                         <img class="qwer" src="image/Mobile Signal.png" alt="" />
-                        <img class="qwer" src="image/Wifi-path.png" alt="" />
+                        <img class="qwer" src="image/Wifi.png" alt="" />
                         <img class="qwer" src="image/Fill.png" alt="" />
                     </div>
 
@@ -120,7 +120,7 @@
                 </div>
                 <div class="rightside">
                     <img class="icon" src="imagenext/Mobile Signal.png" alt="">
-                    <img class="icon" src="imagenext/Wifi-path.png" alt="">
+                    <img class="icon" src="image/Wifi.png" alt="">
                     <img class="icon" src="imagenext/Fill.png" alt="">
                 </div>     
             </header>
